# Playground

./: .gitmodules  README.md
c/stack_up_or_down/: Makefile  main.c
cmake/: README.md
cmake/multiple_targets/: CMakeLists.txt  Makefile  README.md  add_main.cc  sub_main.cc
cmake/multiple_targets/mymath/: CMakeLists.txt  mymath.cc  mymath.h
cpp/: .gitignore
cpp/building_tutorial/: Makefile  main.cc
cpp/building_tutorial/include/: greet.cpp
cpp/can-handler/: .clangd  CMakeLists.txt  Makefile  README.md
cpp/can-handler/canlib/: CMakeLists.txt
cpp/can-handler/canlib/canlib/: base.h  bus.h  format.h  mailbox.h  msg.h  registry.h
cpp/can-handler/canlib/src/: base.cc  bus.cc
cpp/can-handler/src/: can-messages.h  gen_can.h  main.cc
cpp/control/: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
cpp/control/ctrl/: CMakeLists.txt
cpp/control/ctrl/ctrl/: ctrl.hpp  gradient.hpp  kalman.hpp  lls.hpp  state_space.hpp  util.hpp
cpp/control/ctrl/lls/: CMakeLists.txt  lls.cpp
cpp/control/ctrl/src/: CMakeLists.txt  gradient.cpp  kalman.cpp  lls.cpp  state_space.cpp  util.cpp
cpp/control/examples/: CMakeLists.txt  gradient_descent.cpp  gradient_descent.plot  kalman.cpp  lls.cpp  lti.cpp  lti.plot  series.plot
cpp/crtp/: CMakeLists.txt  README.md  bindings.hpp  main.cpp  shared.hpp
cpp/crtp/mcal-cli/: CMakeLists.txt  gpio.hpp  mcal.hpp
cpp/crtp/mcal-stm/: CMakeLists.txt  gpio.hpp  mcal.hpp
cpp/crtp/platform-cli/: bindings.cc
cpp/crtp/platform-stm/: CMakeLists.txt  bindings.cc
cpp/enum-struct/: README.md  main.cpp
cpp/grpc-platformio/: platformio.ini
cpp/grpc-platformio/src/: main.cpp
cpp/gtest/: CMakeLists.txt  Makefile  README.md  example.cpp  hello_test.cc  main.cc
cpp/gtest2/: CMakeLists.txt  Makefile
cpp/platformio/: README.md
cpp/platformio/2_source_files/: platformio.ini
cpp/platformio/4_blink/: .gitignore  blink.ioc  cleanup.sh  platformio.ini
cpp/platformio/4_blink/Src/: gpio.c  main.c
cpp/platformio/5_proto/: platformio.ini
cpp/platformio/5_proto/proto/: demo.proto
cpp/platformio/5_proto/src/: main.cpp
cpp/platformio/biblio/: platformio.ini
cpp/platformio/biblio/src/: main.cpp
cpp/platformio/hello_world/: platformio.ini
cpp/platformio/source_files/inc/: greet.hpp
cpp/std_expected/: Makefile  README.md  main.cc  rusty.cc  rusty.h
cpp/vcan/: CMakeLists.txt  Makefile  README.md  receive.cc  send.cc
cpp/vcan/vcan/: vcan.cc  vcan.h
haskell/: .gitignore  README.md
haskell/factorial/: Makefile  main.hs
haskell/hello_world/: Makefile
python/dictionary/: main.py
python/pdm/: README.md  pyproject.toml
python/pdm/package_index/: index.html  readme.txt
python/pdm/package_index/bkmath/: bkmath-0.2.0-py3-none-any.whl  index.html
python/pdm/package_index/bkmath-geo/: bkmath_geo-0.1.0-py3-none-any.whl  index.html
python/pdm/plugins/geo/: pyproject.toml
python/pdm/plugins/geo/src/bkmath/: geo.py
python/pdm/src/bkmath/: __init__.py
python/pdm/tests/: test_math.py
rust/linear_least_squares/: Cargo.toml  README.md  plot.gnuplot
rust/linear_least_squares/src/: lib.rs  main.rs  polynomial.rs
rust/linkedlist/: README
rust/linkedlist/src/: bad_deque.rs  bad_stack_enum.rs  bad_stack_struct.rs  lib.rs  main.rs  ok_stack.rs  per_stack.rs  unsafe_queue.rs
rust/mario_webserver/: Cargo.toml  README.md
rust/mario_webserver/src/: lib.rs  main.rs  mario.rs
rust/mario_webserver/templates/: hello.html  mario.html
rust/table/: Cargo.toml
rust/table/src/: main.rs  table.rs
rust/tcp/: Cargo.toml
rust/tcp/src/: main.rs
rust/the_book/web-server/: 404.html  README.md
rust/the_book/web-server/src/: lib.rs  (+1 more)
rust/vector/: Cargo.toml  README.md
rust/vector/src/: main.rs
verilog/: .gitignore
verilog/reaction-game/: ClockDivider.v  ClockDivider.vwf  Counter.v  Counter.vwf  ReactionGame.qpf  ReactionGame.qsf  ReactionGame.qws  ReactionGame.v  ReactionGame_Counter.vwf  Segment.v  ToBCD.v
verilog/simple-fsm/: SimpleFSM.qpf  SimpleFSM.qsf  SimpleFSM.qws  SimpleFSM.v  SimpleFSM.vwf  test.v
(+10 files in other folders)
