[project]
name = "bkmath"
version = "0.2.0"
description = "Basic boring math functions"
authors = [
    { name = "BlakeFreer"},
]
dependencies = [
    "numpy>=1.26.4",
]
requires-python = ">=3.12"
readme = "README.md"

[project.license]
text = "MIT"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = []
test = [
    "pytest>=8.1.1",
]
